Instruct Gemini to return JSON